--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,28 +9,28 @@ phases:
       - sudo pip install boto3
       - wget https://releases.hashicorp.com/terraform/1.4.6/terraform_1.4.6_linux_arm64.zip
       - unzip terraform_1.4.6_linux_arm64.zip
-      - sudo mv terraform /bin
-      - sudo chmod +x /usr/bin/terraform
+      - sudo mv terraform /usr/local/bin
+      - sudo chmod +x /usr/local/bin/terraform
       - rm terraform_1.4.6_linux_arm64.zip
       - apt-get update
       - apt-cache search source
+
+  pre_build:
+    commands:
       - echo "Prepare terraform file"
       - git clone https://github.com/davidortizac/fortigate-terraform-deploy.git
       - cd fortigate-terraform-deploy/aws/7.2/single
       - sudo terraform init
       - echo "Prepare terraform initialized"
-  pre_build:
-    commands:
-     - echo "Plan terraform deployment"
-     - cd fortigate-terraform-deploy/aws/7.2/single
-     - sudo terraform plan
+      - echo "Plan terraform deployment"
+      - cd fortigate-terraform-deploy/aws/7.2/single
+      - terraform plan
   build:
     commands:
      - echo "Apply terraform deployment"
      - cd fortigate-terraform-deploy/aws/7.2/single
-     - sudo terraform apply -auto-approve
+     - terraform apply -auto-approve
      - echo "Apply stage finished"
   post_build:
     commands:
       - echo "Nothing to do in the post_build for now"
-      
