--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,17 +3,17 @@ version: 0.2
 phases:
   install:
     commands:
-      - sudo yum update -y
-      - sudo yum install git -y
-      - sudo yum install python3-pip -y
+      - sudo apt update
+      - sudo apt install git -y
+      - sudo apt install python3-pip -y
       - sudo pip install boto3
-      - wget https://releases.hashicorp.com/terraform/1.4.6/terraform_1.4.6_linux_arm64.zip
-      - unzip terraform_1.4.6_linux_arm64.zip
+      - wget https://releases.hashicorp.com/terraform/1.4.6/terraform_1.4.6_linux_amd64.zip
+      - unzip terraform_1.4.6_linux_amd64.zip
       - sudo mv terraform /usr/local/bin
       - sudo chmod +x /usr/local/bin/terraform
-      - rm terraform_1.4.6_linux_arm64.zip
-      - yum update -y
-      - #yum-cache search source
+      - rm terraform_1.4.6_linux_amd64.zip
+      - apt-get update
+      - apt-cache search source
 
   pre_build:
     commands:
