--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,7 +31,7 @@ phases:
      - echo "Apply stage finished"
      #- cd fortigate-terraform-deploy/aws/7.2/single
      - echo "Copying terraform.tfstate to shared folder"
-     - aws s3 cp terraform.tfstate https://s3.us-west-2.amazonaws.com/forti.tfstates/tfstates/
+     - aws s3 cp terraform.tfstate s3://forti.tfstates/tfstates/
      - echo "Terraform state file copied successfully"     
   post_build:
     commands:
