--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,9 @@ phases:
       - sudo mv terraform /usr/local/bin
       - sudo chmod +x /usr/local/bin/terraform
       - rm terraform_1.4.6_linux_amd64.zip
+      - sudo curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      - sudo unzip awscliv2.zip
+      - sudo ./aws/install    
       - apt-get update
       - apt-cache search source
 
